-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
7601
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/a02cc9b2-9ec5-11e2-975f-52540035b04c.
The sub-test test_17m failed with the following error:
e2fsck should not report error upon short/long symlink MDT: rc=4
Aftter upgrade from 1.8.9 to 2.4, adding a new MDT, hit following error. I found LU-2097 has the similar error while it has been landed:
== sanity test 17m: run e2fsck against MDT which contains short/long symlink == 18:20:11 (1365211211)
create 512 short and long symlink files under /mnt/lustre/d0.sanity/d17m
erase them
Waiting for local destroys to complete
recreate the 512 symlink files with a shorter string
stop and checking mds1: e2fsck -fnvd /dev/sdb1
Stopping /mnt/mds1 (opts:-f) on fat-amd-1
fat-amd-1: e2fsck 1.42.6.wc2 (10-Dec-2012)
fat-amd-1: [QUOTA WARNING] Usage inconsistent for ID 0:actual (5300224, 1209) != expected (5107712, 1086)
fat-amd-1: [QUOTA WARNING] Usage inconsistent for ID 0:actual (5296128, 1208) != expected (5103616, 1085)
Pass 1: Checking inodes, blocks, and sizes
Pass 2: Checking directory structure
Pass 3: Checking directory connectivity
Unconnected directory inode 31 (/ROOT/d0.sanity/???)
Connect to /lost+found? no
'..' in ... (31) is /ROOT/d0.sanity (30), should be <The NULL inode> (0).
Fix? no
Unconnected directory inode 32 (/ROOT/d0.sanity/???)
Connect to /lost+found? no
'..' in ... (32) is /ROOT/d0.sanity (30), should be <The NULL inode> (0).
Fix? no
Pass 4: Checking reference counts
Inode 30 ref count is 18, should be 20. Fix? no
Inode 31 ref count is 2, should be 1. Fix? no
Inode 32 ref count is 2, should be 1. Fix? no
Pass 5: Checking group summary information
Update quota info for quota type 0? no
Update quota info for quota type 1? no
lustre-MDT0000: ********** WARNING: Filesystem still has errors **********
1222 inodes used (0.12%, out of 1000184)
73 non-contiguous files (6.0%)
1 non-contiguous directory (0.1%)
# of inodes with ind/dind/tind blocks: 2/0/0
147815 blocks used (29.56%, out of 500000)
0 bad blocks
1 large file
117 regular files
72 directories
0 character device files
0 block device files
0 fifos
5 links
1024 symbolic links (512 fast symbolic links)
0 sockets
------------
1218 files
Starting mds1: -o user_xattr,acl /dev/sdb1 /mnt/mds1
Started lustre-MDT0000
sanity test_17m: @@@@@@ FAIL: e2fsck should not report error upon short/long symlink MDT: rc=4
Trace dump: