LU-3129 osd: Get FID from LMA if not in directory entry

During deleting agent inode, if the FID can not be found in
directory entries, for example FS upgraded from 1.8 or restored
FS, it should try to get the FID from LMA.

Fix DNE upgrade tests to use a temporary loop device for adding
new MDT, instead of MDTDEV2, which might affect other tests.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I082c330f2b12258e996bdd9820db56a8659540f1
Reviewed-on: http://review.whamcloud.com/5997
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>